--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -18,9 +18,9 @@
                 <h3 id="treg">Змінити ПІБ:</h3><br>
                 <div id="inem">
                     <input type="email" name="email" id="email1" readonly><br>
-                    <input type="text" placeholder="Прізвище" name="surname" id="nreg"><br/>
-                    <input type="text" placeholder="Ім'я" name="name" id="nreg"><br/>
-                    <input type="text" placeholder="По-батькові" name="nameF" id="nreg"><br/>
+                    <input type="text" placeholder="Прізвище" name="surname" id="settText"><br/>
+                    <input type="text" placeholder="Ім'я" name="name" id="settText"><br/>
+                    <input type="text" placeholder="По-батькові" name="nameF" id="settText"><br/>
                 </div>
                 <h3 id="settMess"><%= settMess1%></h3>
                 <div id="btn">
@@ -44,9 +44,9 @@
                 <input type="email" style="display:none;" name="email" id="email3" readonly><br>
                 <h3 id="treg">Змінити пароль:</h3><br>
                 <label>Введіть ваш пароль:</label>
-                <input type="password" required placeholder="Введіть пароль" name="password" id="nreg"><br>
+                <input type="password" required placeholder="Введіть пароль" name="password" id="settText"><br>
                 <label>Введіть ваш новий пароль:</label>
-                <input type="password" required placeholder="Введіть новий пароль" name="newPassword" id="nreg"><br>
+                <input type="password" required placeholder="Введіть новий пароль" name="newPassword" id="settText"><br>
                 <h3 id="settMess"><%= settMess3%></h3>
                 <div id="btn">
                     <input type="submit" id="button" value="Змінити">
